Ref: planning des réservation revu (rearrange utilisé) Bug: sur les antécédents dans le planning resa Erg: suppression du z-index de tout les plannings qui posent pb sur les vues au dessus des plages
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@18517 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/main.css
+++ b/style/mediboard/main.css
@@ -586,7 +586,6 @@ table#weeklyPlanning th.today {
 .planning .event:hover {
   outline: none;
   border-color: #666;
-  z-index: 100;
 }
 
 .planning .event.selected:hover {
